Remove build warnings.